--- a/SmartThings/SmartThings.csproj
+++ b/SmartThings/SmartThings.csproj
@@ -66,7 +66,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Application\Application.csproj" />
+	  <ProjectReference Include="..\ApplicationLayer\ApplicationLayer.csproj" />
+	  <!--<ProjectReference Include="..\Application\App" />-->
 	</ItemGroup>
 
 </Project>
