--- a/SmartThings/SmartThings.csproj
+++ b/SmartThings/SmartThings.csproj
@@ -50,7 +50,6 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
@@ -69,6 +68,10 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\ApplicationLayer\ApplicationLayer.csproj" />
 	  <!--<ProjectReference Include="..\Application\App" />-->
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 	</ItemGroup>
 
 	<ItemGroup>
